<resources>
    <string name="app_name">你的APP</string>
    <string name="click_me">点击我吧</string>
    <string name="no_see_me">不想看我,就点这个</string>
    <string name="not_click_me">不要点我了</string>
    <string name="not_show_anything">我不会显示什么东西的</string>
    <string name="con_not_add">还不能添加东西呢</string>
    <string name="con_not_remove">没有删除这个功能</string>
    <string name="to_next_page">你赢了.再点一次就给你看下个页面</string>
    <string name="is_useless">点击是没有用的</string>
    <string name="is_useless_again">没骗你呢,点击是没有用的</string>
    <string name="me_true">我才是真的</string>
    <string name="go_bai_du">去百度找找为什么</string>
    <string name="other_way_to_bai_du">换个方式去百度</string>
    <string name="open_this">打开咯</string>
    <string name="call_someone">打个电话吧</string>
    <string name="the_truth">心里话</string>
    <string name="say_something">说点什么吧</string>
    <string name="guess_you">让我猜一猜</string>
    <string name="guess_you_words">我猜你说的话是</string>
    <string name="enter_again">告诉我</string>
    <string name="you_say_result">你说觉得对不对</string>
    <string name="result_true">对</string>
    <string name="result_false">不对</string>
</resources>
