<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/clickMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_me" />

    <Button
        android:id="@+id/meTrue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/me_true" />
    <Button
        android:id="@+id/theTruth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_truth" />

    <Button
        android:id="@+id/closeApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_see_me" />
</LinearLayout>