<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/guessYouWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/guess_you_words"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/youWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/youSayResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/you_say_result"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/your_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/result_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_false" />

        <RadioButton
            android:id="@+id/result_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_true" />
    </RadioGroup>

    <Button
        android:id="@+id/enterAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_again" />


</LinearLayout>