<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/notClickMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_click_me" />

    <Button
        android:id="@+id/goBaidu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_bai_du" />

    <Button
        android:id="@+id/otherWay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_way_to_bai_du" />
</LinearLayout>